Merged revisions 73702 via svnmerge from svn+ssh://pythondev@www.python.org/python/branches/py3k

................
  r73702 | mark.dickinson | 2009-06-30 16:45:17 +0100 (Tue, 30 Jun 2009) | 10 lines

  Merged revisions 73701 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r73701 | mark.dickinson | 2009-06-30 16:32:30 +0100 (Tue, 30 Jun 2009) | 3 lines

    Issue #6347:  Add inttypes.h to the pyport.h #includes;  fixes a build
    failure on HP-UX 11.00.
  ........
................